--- a/vercel.json
+++ b/vercel.json
@@ -7,12 +7,19 @@
             "config": {
                 "maxLambdaSize": "15mb"
             }
+        },
+        {
+            "src": "static/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
             "src": "/static/(.*)",
-            "dest": "/static/$1"
+            "dest": "/static/$1",
+            "headers": {
+                "Cache-Control": "public, max-age=31536000, immutable"
+            }
         },
         {
             "src": "/(.*)",
