--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ numpy==2.1.1
 gunicorn==23.0.0
 supabase==2.28.0
 python-dotenv==1.0.0
-Flask-Talisman>=1.0.0requests==2.31.0
+Flask-Talisman>=1.0.0
+requests==2.31.0
